--- a/vroxhub-app/package.json
+++ b/vroxhub-app/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
-    "@studio-freight/react-lenis": "^0.0.47",
     "@types/react-slick": "^0.23.13",
     "@types/three": "^0.182.0",
     "framer-motion": "^12.23.26",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "prop-types": "^15.8.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
